--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class=" box">
             <div class="box-content">
                 <h2> Cloths </h2>
-                <div class="box-img" style=" background-image: url('./resource/box1_image.jpg');"></div>
+                <div class="box-img" style=" background-image: url('.box1_image.jpg');"></div>
                 <p>see more</p>    
             </div>
         </div>
